...
    <string name="recipe_image_description">Recipe Image</string>
    <string name="video_thumbnail_description">Video Thumbnail</string>
    <string name="miriam_content_description">Miriam</string>
    <string name="minimize_button_description">Minimize Button</string>
    <string name="podcast_album_cover_description">Podcast Album Cover</string>

    <string name="home_menu">Home</string>
    <string name="widget_select_recipe_configure">Select Recipe</string>
    <string name="ingredient_separator">-</string>
    <string name="exo_player_video_error">Video Not Available</string>
    <string name="tab_title_ingredients">Ingredients</string>
    <string name="tab_title_steps">WalkThrough</string>
    <string name="empty_toolbar_title"> </string>

</resources>

