<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/recipeListFragment"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu"
        android:visible="true"
        app:showAsAction="always" />
</menu>
